--- a/POC/POC/POC.csproj
+++ b/POC/POC/POC.csproj
@@ -78,6 +78,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnBase.cs" />
+    <Compile Include="ColumnDefine.cs" />
+    <Compile Include="FormBase.cs" />
+    <Compile Include="FormDefine.cs" />
+    <Compile Include="FormFactory.cs" />
+    <Compile Include="IFormDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specs\讀取手術全期表單.feature.cs">
