--- a/POC/POC/POC.csproj
+++ b/POC/POC/POC.csproj
@@ -78,26 +78,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormBase.cs" />
-    <Compile Include="FormDefine.cs" />
-    <Compile Include="FormFactory.cs" />
-    <Compile Include="IFormDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Specs\依定義產生表單.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>依定義產生表單.feature</DependentUpon>
-    </Compile>
-    <Compile Include="表單與欄位工廠Steps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Specs\依定義產生表單.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>依定義產生表單.feature.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
@@ -113,6 +99,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Specs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
