--- a/POC/POC/packages.config
+++ b/POC/POC/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="ExpectedObjects" version="1.2.3" targetFramework="net452" />
-  <package id="Moq" version="4.5.30" targetFramework="net452" />
+  <package id="Moq" version="4.7.0" targetFramework="net452" />
   <package id="NUnit" version="3.6.0" targetFramework="net452" />
+  <package id="Pickles.CommandLine" version="2.13.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
 </packages>
