--- a/POC/POC/packages.config
+++ b/POC/POC/packages.config
@@ -4,6 +4,13 @@
   <package id="ExpectedObjects" version="1.2.3" targetFramework="net452" />
   <package id="Moq" version="4.7.0" targetFramework="net452" />
   <package id="NUnit" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
   <package id="Pickles.CommandLine" version="2.13.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
